syntax = "proto3";

option csharp_namespace = "PerfRunner";

package perf;

// Perf service definition.
service Perf {

    // Senda a ping response
    rpc Ping (PingRequest) returns (PingReply);

    // Run a test
    rpc RunTest (TestRequest) returns (TestReply);

    // Run a test
    rpc StopAllTests (StopAllTestsRequest) returns (StopAllTestsReply);
}

// request with user id
message PingRequest {
    string name = 1;
}

//message ping reply
message PingReply {
    string message = 1;
}

// request with user id
message TestRequest {

    // guid of the test
    string guid = 1;
    
    // name of the test
    string name = 2;

    // rate at which the test should run per second
    int32 rate = 3;
}

//message ping reply
message TestReply {

    // status of test start
    bool status = 1;

    // message
    string message = 2;
}

// StopAllTests request
message StopAllTestsRequest {
}

// StopAllTests response
message StopAllTestsReply {
    bool status = 1;
}

